# advent2022

./: .gitignore  README.md  advent.cabal  day16.py  out.txt  out2.txt  shell.nix
app/: Main.hs
src/Advent/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day22.py  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Solver.hs  Util.hs
src/Advent/Y2023/: Day1.hs
tests/: test.hs
