cabal-version:   3.0
name:            advent
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Amogh Rathore
maintainer:      amoghdroid09@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        OverloadedStrings
        ScopedTypeVariables

library
    import:           warnings, extensions
    exposed-modules:
        Advent.Day1
        Advent.Day2
        Advent.Day3
        Advent.Day4
        Advent.Day5
        Advent.Util
        Advent.Solver

    build-depends:
        , base        ^>=4.16.4.0
        , bytestring  ^>=0.11.4.0
        , containers  ^>=0.6.7
        , split       ^>=0.2.3.5
        , vector      ^>=0.13.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable advent
    import:           warnings, extensions
    main-is:          Main.hs

    -- other-modules:
    -- other-extensions:
    build-depends:
        , advent
        , base        ^>=4.16.4.0
        , bytestring  ^>=0.11.4.0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -rtsopts

test-suite test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          test.hs
    build-depends:
        , advent
        , base         >=4        && <5
        , tasty        >=1.4.3
        , tasty-hunit  >=0.10.0.3
