cabal-version:   3.0
name:            advent
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Amogh Rathore
maintainer:      amoghdroid09@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        BangPatterns
        FlexibleContexts
        OverloadedRecordDot
        OverloadedStrings
        ScopedTypeVariables
        TupleSections

library
    import:           warnings, extensions
    exposed-modules:
        Advent.Day1
        Advent.Day10
        Advent.Day11
        Advent.Day12
        Advent.Day13
        Advent.Day14
        Advent.Day15
        Advent.Day16
        Advent.Day17
        Advent.Day18
        Advent.Day19
        Advent.Day20
        Advent.Day2
        Advent.Day3
        Advent.Day4
        Advent.Day5
        Advent.Day6
        Advent.Day7
        Advent.Day8
        Advent.Day9
        Advent.Solver
        Advent.Util

    build-depends:
        , array       ^>=0.5.4.0
        , base        ^>=4.16.4.0
        , bytestring  ^>=0.11.4.0
        , containers  ^>=0.6.7
        , extra       ^>=1.7.14
        , mtl         ^>=2.3.1
        , split       ^>=0.2.3.5
        , vector      ^>=0.13.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable advent
    import:           warnings, extensions
    main-is:          Main.hs
    build-depends:
        , advent
        , base        ^>=4.16.4.0
        , bytestring  ^>=0.11.4.0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -rtsopts

test-suite test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          test.hs
    build-depends:
        , advent
        , base         >=4         && <5
        , bytestring   ^>=0.11.4.0
        , tasty        >=1.4.3
        , tasty-hunit  >=0.10.0.3
